# Verdictra-Law.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  README.md  check_faiss.py  config.py  diagnose_pdf.py  docker-compose.yml  ingestion.py  main.py  ontology.ttl  patch_kge.py  pyproject.toml  query_pipeline.py  shapes.ttl  test_kge.py
app/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
app/frontend/public/: landing.html  privacy.html  terms.html
app/frontend/src/: App.tsx  (+1 more)
data/: relationship_upgrade_log.json
nginx/: frontend.conf  nginx.conf
pipeline/: document_registry.py  embedding_generator.py  entity_extractor.py  entity_management.py  entity_resolver.py  graph_builder.py  kge_trainer.py  pdf_extractor.py  pdf_to_markdown.py  relationship_extractor.py  tree_builder.py  validator.py
pipeline/domains/: __init__.py  banking_finance.json  constitutional.json  corporate.json  criminal.json  ip_patent.json  labour.json  property.json  registry.py  tax.json  universal.json
pipeline/extractors/: __init__.py  base_extractor.py  docx_extractor.py  email_extractor.py  image_extractor.py  pdf_extractor.py  router.py  txt_extractor.py
resolver_ui/: app.py  auth.py  email_service.py  law_research.py  user_db.py
resolver_ui/templates/: complete.html  index.html  processing.html  query.html  review.html  summary.html
retrieval/: agent.py  fusion.py  graph_retriever.py  query_classifier.py  tree_retriever.py
test_&_versions/: Technical Manual.docx  entity_extractor.py  relationship_upgrader.py
(+18 files in other folders)
